--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "frontend": "npm run dev --prefix frontend"
+    "frontend": "npm run dev --prefix frontend",
+    "bulid": "npm run build --prefix frontend",
+    "start": "npm run start --prefix frontend"
   },
   "author": "",
   "license": "ISC",
