--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@helia/json": "^1.0.0",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -16,6 +17,7 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.9.3",
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -24,9 +26,13 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.3.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "eth-crypto": "^2.6.0",
     "ethers": "^6.6.3",
+    "helia": "^1.3.8",
     "lucide-react": "^0.259.0",
     "next": "13.4.7",
     "nodemailer": "^6.9.4",
